Add images folder

--- a/Saraksts.html
+++ b/Saraksts.html
@@ -164,68 +164,68 @@
         </tbody>
     </table>
 
-    <div class="container text-center border">
-        <div class="row">
-            <div class="col text-left border">
-                <h2>Pietura: BUTLEROVA IELA</h2>
-            </div>
-            <div class="col text-right border">
-                <h2>Marsruts Nr.1</h2>
-            </div>
-            <div class="w-100"></div>
-            <div class="col text-left border">
-                <h3>Darbdienas</h3>
-            </div>
-            <div class="w-100"></div>
-            <!-- First bold row -->
-            <div class="col text-center border font-weight-bold">4</div>
-            <div class="col text-center border font-weight-bold">5</div>
-            <div class="col text-center border font-weight-bold">6</div>
-            <div class="col text-center border font-weight-bold">7</div>
-            <div class="col text-center border font-weight-bold">8</div>
-            <div class="col text-center border font-weight-bold">9</div>
-            <div class="col text-center border font-weight-bold">10</div>
-            <div class="col text-center border font-weight-bold">11</div>
-            <div class="col text-center border font-weight-bold">12</div>
-            <div class="col text-center border font-weight-bold">13</div>
-            <div class="col text-center border font-weight-bold">14</div>
-            <div class="col text-center border font-weight-bold">15</div>
-            <div class="col text-center border font-weight-bold">16</div>
-            <div class="col text-center border font-weight-bold">17</div>
-            <div class="col text-center border font-weight-bold">18</div>
-            <div class="col text-center border font-weight-bold">19</div>
-            <div class="col text-center border font-weight-bold">20</div>
-            <div class="col text-center border font-weight-bold">21</div>
-            <div class="col text-center border font-weight-bold">22</div>
-            <div class="col text-center border font-weight-bold">23</div>
-            <div class="col text-center border font-weight-bold">00</div>
-            <div class="w-100"></div>
-            <!-- Next row -->
-            <div class="col text-center border">20</div>
-            <div class="col text-center border">25</div>
-            <div class="col text-center border">13</div>
-            <div class="col text-center border">01</div>
-            <div class="col text-center border">05</div>
-            <div class="col text-center border">01</div>
-            <div class="col text-center border">03</div>
-            <div class="col text-center border">06</div>
-            <div class="col text-center border">02</div>
-            <div class="col text-center border">06</div>
-            <div class="col text-center border">02</div>
-            <div class="col text-center border text-danger">06</div>
-            <div class="col text-center border text-danger">00</div>
-            <div class="col text-center border text-danger">02</div>
-            <div class="col text-center border text-danger">04</div>
-            <div class="col text-center border text-danger">08</div>
-            <div class="col text-center border">03</div>
-            <div class="col text-center border">00</div>
-            <div class="col text-center border">05</div>
-            <div class="col text-center border">05</div>
-            <div class="col text-center border">05</div>
-            <div class="w-100"></div>
-            <!-- Next row -->
-        </div>
-    </div>
+    <!--<div class="container text-center border">-->
+        <!--<div class="row">-->
+            <!--<div class="col text-left border">-->
+                <!--<h2>Pietura: BUTLEROVA IELA</h2>-->
+            <!--</div>-->
+            <!--<div class="col text-right border">-->
+                <!--<h2>Marsruts Nr.1</h2>-->
+            <!--</div>-->
+            <!--<div class="w-100"></div>-->
+            <!--<div class="col text-left border">-->
+                <!--<h3>Darbdienas</h3>-->
+            <!--</div>-->
+            <!--<div class="w-100"></div>-->
+            <!--&lt;!&ndash; First bold row &ndash;&gt;-->
+            <!--<div class="col text-center border font-weight-bold">4</div>-->
+            <!--<div class="col text-center border font-weight-bold">5</div>-->
+            <!--<div class="col text-center border font-weight-bold">6</div>-->
+            <!--<div class="col text-center border font-weight-bold">7</div>-->
+            <!--<div class="col text-center border font-weight-bold">8</div>-->
+            <!--<div class="col text-center border font-weight-bold">9</div>-->
+            <!--<div class="col text-center border font-weight-bold">10</div>-->
+            <!--<div class="col text-center border font-weight-bold">11</div>-->
+            <!--<div class="col text-center border font-weight-bold">12</div>-->
+            <!--<div class="col text-center border font-weight-bold">13</div>-->
+            <!--<div class="col text-center border font-weight-bold">14</div>-->
+            <!--<div class="col text-center border font-weight-bold">15</div>-->
+            <!--<div class="col text-center border font-weight-bold">16</div>-->
+            <!--<div class="col text-center border font-weight-bold">17</div>-->
+            <!--<div class="col text-center border font-weight-bold">18</div>-->
+            <!--<div class="col text-center border font-weight-bold">19</div>-->
+            <!--<div class="col text-center border font-weight-bold">20</div>-->
+            <!--<div class="col text-center border font-weight-bold">21</div>-->
+            <!--<div class="col text-center border font-weight-bold">22</div>-->
+            <!--<div class="col text-center border font-weight-bold">23</div>-->
+            <!--<div class="col text-center border font-weight-bold">00</div>-->
+            <!--<div class="w-100"></div>-->
+            <!--&lt;!&ndash; Next row &ndash;&gt;-->
+            <!--<div class="col text-center border">20</div>-->
+            <!--<div class="col text-center border">25</div>-->
+            <!--<div class="col text-center border">13</div>-->
+            <!--<div class="col text-center border">01</div>-->
+            <!--<div class="col text-center border">05</div>-->
+            <!--<div class="col text-center border">01</div>-->
+            <!--<div class="col text-center border">03</div>-->
+            <!--<div class="col text-center border">06</div>-->
+            <!--<div class="col text-center border">02</div>-->
+            <!--<div class="col text-center border">06</div>-->
+            <!--<div class="col text-center border">02</div>-->
+            <!--<div class="col text-center border text-danger">06</div>-->
+            <!--<div class="col text-center border text-danger">00</div>-->
+            <!--<div class="col text-center border text-danger">02</div>-->
+            <!--<div class="col text-center border text-danger">04</div>-->
+            <!--<div class="col text-center border text-danger">08</div>-->
+            <!--<div class="col text-center border">03</div>-->
+            <!--<div class="col text-center border">00</div>-->
+            <!--<div class="col text-center border">05</div>-->
+            <!--<div class="col text-center border">05</div>-->
+            <!--<div class="col text-center border">05</div>-->
+            <!--<div class="w-100"></div>-->
+            <!--&lt;!&ndash; Next row &ndash;&gt;-->
+        <!--</div>-->
+    <!--</div>-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
